# riteh-discord-bot

./: .gitignore  README.md  pyproject.toml
src/: bot.py  db.py  menza.py  riteh.py
src/cogs/: menza.py  novosti.py
src/cogs/riteh_novosti/: cog.py  web.py
src/cogs/scri_menza/: cog.py  web.py
src/cogs/scri_student_servis/: cog.py  web.py
