[tool.poetry]
name = "riteh-discord-bot"
version = "0.0.1"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.3"
"discord.py" = "^2.4.0"
beautifulsoup4 = "^4.12.3"
cachetools = "^5.5.0"
fuzzywuzzy = "^0.18.0"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 128
indent-width = 4
target-version = "py38"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I001", "C901", "W", "ANN"]
ignore = ["ANN1", "ANN204", "ANN401"]
fixable = ["ALL"]
unfixable = []


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
